@@ -275,7 +275,7 @@ class DADatabase : public IRDatabase {
 	om_doccount get_termfreq(const om_termname & tname) const;
 	bool term_exists(const om_termname & tname) const;
 
-	LeafPostList * open_post_list(const om_termname & tname, RSet * rset) const;
+	LeafPostList * open_post_list(const om_termname & tname) const;
 	LeafTermList * open_term_list(om_docid did) const;
 	LeafDocument * open_document(om_docid did) const;
 
@@ -314,7 +314,7 @@ DADatabase::get_doclength(om_docid did) const
 inline om_doccount
 DADatabase::get_termfreq(const om_termname & tname) const
 {
-    PostList *pl = open_post_list(tname, NULL);
+    PostList *pl = open_post_list(tname);
     om_doccount freq = 0;
     if(pl) freq = pl->get_termfreq();
     delete pl;
