@@ -199,7 +199,7 @@ DBDatabase::open(const DatabaseBuilderParams & params)
 
 // Returns a new posting list, for the postings in this database for given term
 LeafPostList *
-DBDatabase::open_post_list(const om_termname & tname, RSet * rset) const
+DBDatabase::open_post_list(const om_termname & tname) const
 {
     Assert(opened);
 
