@@ -117,7 +117,7 @@ LeafPostList *
 LeafMatch::mk_postlist(const om_termname& tname, RSet * rset)
 {
     // FIXME - this should be centralised into a postlist factory
-    LeafPostList * pl = database->open_post_list(tname, rset);
+    LeafPostList * pl = database->open_post_list(tname);
     if(rset) rset->will_want_termfreq(tname);
 
     IRWeight * wt = mk_weight(1, tname, rset);
